# fliton-fib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  basic_model.py  benchmark_add_vector.py  benchmark_object.py  example.yml  example_err_1.yml  example_err_2.yml  exec_time_compare.py  local_build.sh  setup.py
fliton_fib_rs/: __init__.py  config_number_command.py  counter.py  fib_number_adapter.py  fib_number_command.py  numpy_model.py  object_interface.py
src/: lib.rs  numpy_model.rs
src/class_module/: fib_processor.rs
src/fib_calcs/: fib_number.rs  fib_numbers.rs
src/interface/: config.rs  object.rs
